[gd_scene load_steps=3 format=3 uid="uid://docshgc7ugibe"]

[ext_resource type="Script" path="res://scripts/UI/main_menu_hud.gd" id="1_ahi42"]
[ext_resource type="PackedScene" uid="uid://o8npypnga12n" path="res://assets/UI/menu_button.tscn" id="2_tfxew"]

[node name="main_menu_hud" type="CanvasLayer" node_paths=PackedStringArray("current_screen")]
script = ExtResource("1_ahi42")
current_screen = NodePath("screens/title")

[node name="screens" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="title" type="Node2D" parent="screens"]

[node name="title" type="Sprite2D" parent="screens/title"]

[node name="Polygon2D" type="Polygon2D" parent="screens/title"]
color = Color(0, 0, 0, 0.67451)
polygon = PackedVector2Array(-4, -9, 758, -24, 406, 1106, -8, 1085)

[node name="GridContainer" type="GridContainer" parent="screens/title"]
offset_left = 50.0
offset_top = 381.0
offset_right = 401.0
offset_bottom = 907.0
theme_override_constants/v_separation = 50

[node name="play" parent="screens/title/GridContainer" instance=ExtResource("2_tfxew")]
layout_mode = 2
text = " PLAY"

[node name="settings" parent="screens/title/GridContainer" instance=ExtResource("2_tfxew")]
layout_mode = 2
text = " SETTINGS"

[node name="credits" parent="screens/title/GridContainer" instance=ExtResource("2_tfxew")]
layout_mode = 2
text = " CREDITS"

[node name="quit" parent="screens/title/GridContainer" instance=ExtResource("2_tfxew")]
layout_mode = 2
text = " QUIT"

[node name="settings" type="Node2D" parent="screens"]
position = Vector2(-800, 0)

[node name="Polygon2D" type="Polygon2D" parent="screens/settings"]
color = Color(0, 0, 0, 0.67451)
polygon = PackedVector2Array(-4, -9, 758, -24, 406, 1106, -8, 1085)

[node name="GridContainer" type="GridContainer" parent="screens/settings"]
offset_left = 50.0
offset_top = 381.0
offset_right = 401.0
offset_bottom = 907.0
theme_override_constants/v_separation = 50

[node name="audio" parent="screens/settings/GridContainer" instance=ExtResource("2_tfxew")]
layout_mode = 2
text = " AUDIO"

[node name="visual" parent="screens/settings/GridContainer" instance=ExtResource("2_tfxew")]
layout_mode = 2
text = " â€ŽVISUAL"

[node name="key_binds" parent="screens/settings/GridContainer" instance=ExtResource("2_tfxew")]
layout_mode = 2
text = " KEY BINDS"

[node name="settings_back" parent="screens/settings/GridContainer" instance=ExtResource("2_tfxew")]
layout_mode = 2
text = " BACK"

[node name="audio_settings" type="Node2D" parent="screens"]

[node name="Polygon2D" type="Polygon2D" parent="screens/audio_settings"]
color = Color(0, 0, 0, 0.67451)
polygon = PackedVector2Array(-4, -9, 758, -24, 406, 1106, -8, 1085)

[connection signal="pressed" from="screens/title/GridContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="screens/title/GridContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="screens/title/GridContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="screens/title/GridContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="screens/settings/GridContainer/audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="screens/settings/GridContainer/visual" to="." method="_on_visual_pressed"]
[connection signal="pressed" from="screens/settings/GridContainer/key_binds" to="." method="_on_key_binds_pressed"]
[connection signal="pressed" from="screens/settings/GridContainer/settings_back" to="." method="_on_settings_back_pressed"]
